--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>CGPA Calculator</title>
 </head>
 <body>
-    
+ 
 </body>
 </html>
+
+
+const score = 85;
+const grade = score > 90 ? 'A' : score > 80 ? 'B' : 'C';
+console.log(grade); // Output: 'B'
+
